// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible Text component renders correctly 1`] = `
<Text
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "color": undefined,
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 15,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.content"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard d...
  </Text>
  <Text
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.show_text"
  >
    See more
  </Text>
</Text>
`;

exports[`Collapsible Text component renders correctly testID 1`] = `
<Text
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "color": undefined,
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 15,
      },
      Object {},
      undefined,
    ]
  }
  testID="collapsible_text"
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.content"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard d...
  </Text>
  <Text
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.show_text"
  >
    See more
  </Text>
</Text>
`;

exports[`Collapsible Text component renders correctly with markdown 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
        },
      ]
    }
  >
    <Text>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#386fe5",
              "fontFamily": "BeVietnamPro-SemiBold",
            },
          ]
        }
        testID="text_mention"
      >
        @vantest1
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Collapsible Text component should render full text when click read more button text  1`] = `
<Text
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "color": undefined,
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 15,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.content"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s. When an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting. Remaining essentially unchanged. It was popularised in the 1960s simply dummy text printing standard dummy text.
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
  </Text>
  <Text
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.show_text"
  >
    See less
  </Text>
</Text>
`;

exports[`Collapsible Text component should render short text with a short length and limit the length 1`] = `
<Text
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "color": undefined,
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 15,
      },
      Object {},
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.content"
  >
    Lorem Ipsum is simply dummy text of the printing a...
  </Text>
  <Text
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "BeVietnamPro-Light",
          "fontSize": 15,
        },
        Object {},
        undefined,
      ]
    }
    testID="collapsible_text.show_text"
  >
    See more
  </Text>
</Text>
`;
